# kaipule_sdk

control/: .gitattributes  .gitignore  CMakeLists.txt  README.md
control/config/: pitch_change_parameter.yaml  security_params.yaml
control/config/kinematics/: link_params.yaml
control/csv_file/: all_joint_target_msg_position.csv  aoteman.csv  chenglong.csv  huishou.csv  huoyanjingjin.csv  jiekexun.csv  jinli.csv  kenan.csv  kenan.csv-20250721-1533  mobizi.csv  niguolaia.csv  shoushi8.csv  tanshou.csv  target_pos_goodhold.csv  target_pos_handshake.csv  wanmei.csv  weibolu.csv  woshou.csv  woshou.csv-20250721-1246  woshouzuo.csv
control/launch/: simu.launch
